Fix modal overflow

--- a/css/guest.css
+++ b/css/guest.css
@@ -92,6 +92,10 @@ html[data-bs-theme="dark"] .bg-white-black {
     mask-image: linear-gradient(0.5turn, transparent, black 40%, black 60%, transparent);
 }
 
+.modal-open {
+    overflow: clip !important;
+}
+
 .width-loading {
     width: 25%;
 }
